# maincode

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/: RELEASING.md
docs/superpowers/plans/: 2026-07-12-maincode-editor.md  2026-07-12-task-14-source-control-panel.md  2026-07-13-multi-window.md  2026-07-13-ts-worker.md  2026-07-14-editor-window-ux-batch.md  2026-07-14-lsp-integration.md  2026-07-14-multi-language-lsp.md  2026-07-14-node-lsp-batch.md
docs/superpowers/specs/: 2026-07-12-maincode-editor-design.md  2026-07-13-multi-window-design.md  2026-07-13-settings-page-design.md  2026-07-13-ts-worker-design.md  2026-07-14-editor-window-ux-batch-design.md  2026-07-14-lsp-integration-design.md  2026-07-14-multi-language-lsp-design.md
resources/lsp/: .gitignore
scripts/: build-mac.sh  fetch-lsp.mjs  main  make-latest-json.mjs  notarize-test.sh  sign-lsp-resources.sh  staple-dmg.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements-node.plist  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  dock_menu.rs  fs_ops.rs  git.rs  lib.rs  lsp.rs  main.rs  menu.rs  pty.rs  server_acquire.rs  settings.rs  watcher.rs
src/components/command-center/: command-center.tsx
src/components/command-palette/: command-palette.tsx
src/components/commit-detail/: commit-detail-header.tsx
src/components/diff-panel/: diff-panel.tsx  diff-toolbar.tsx
src/components/editor/: code-editor.tsx  editor-area.tsx  find-widget.tsx  image-viewer.tsx  language-servers-section.tsx  lint-refresh.test.ts  settings-view.tsx  tab-bar.tsx
src/components/file-tree/: file-tree-context-menu.tsx  file-tree.tsx  name-dialog.tsx
src/components/sidebar/: commit-avatar.tsx  commit-row.tsx  sidebar-history.tsx  sidebar-switch.tsx  sidebar-tabs.tsx  sidebar.tsx
src/components/source-control/: sc-context-menu.tsx  source-control-panel.tsx
src/components/status-bar/: lsp-progress-segment.tsx  status-bar.tsx
src/components/terminal/: terminal-dock.test.tsx  terminal-dock.tsx  terminal-panel.tsx  terminal-sessions.ts  terminal-tabs.test.tsx  terminal-tabs.tsx
src/components/titlebar/: ai-launcher.test.tsx  ai-launcher.tsx  title-bar.tsx  update-indicator.test.tsx  update-indicator.tsx
src/components/ui/: command.tsx
src/components/welcome/: welcome.tsx
src/hooks/: editor-tabs-reducer.test.ts  editor-tabs-reducer.ts  use-commit-details-cache.tsx  use-commit-diff.ts  use-commit-history.ts  use-diff-settings.tsx  use-diffs.ts  use-editor-font.tsx  use-editor-search.ts  use-editor.tsx  use-recent-repos.tsx  use-repo-status.ts  use-settings.test.ts  use-settings.tsx  use-update-check.test.ts  use-update-check.ts  use-workspace.tsx
src/lib/: cm-language.ts  cm-setup.ts  cm-theme.ts  format.ts  fs.ts  image.ts  intelligence.ts  language.test.ts  language.ts  perf.ts  settings.ts  tauri.ts
src/lib/lsp/: client.test.ts  client.ts  lsp.integration.test.ts  manager.test.ts  manager.ts  multilang.integration.test.ts  node-batch.integration.test.ts  protocol.test.ts  protocol.ts  transport.ts
src/lib/ts-worker/: client.test.ts  client.ts  cm.ts  code-highlight.ts  hover-render.ts  mapping.test.ts  mapping.ts  markdown-dom.test.ts  markdown-dom.ts  protocol.test.ts  protocol.ts  worker.integration.test.ts  worker.landing.integration.test.ts  worker.ts
