[package]
name = "maincode"
version = "0.1.2"
description = "A simple desktop code editor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maincode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", default-features = false, features = ["https", "ssh", "vendored-openssl", "vendored-libgit2"] }
notify = "8"
notify-debouncer-full = "0.5"
portable-pty = "0.9"
# base64 is already in the lockfile transitively (v0.22.1); declaring it here
# adds no new package — it just makes the crate directly nameable.
base64 = "0.22"

# macOS-only native interop for the Dock-menu "New Window" item. These crates
# are already in the tree (pulled in transitively by tauri/tao); listing them
# here only makes them directly nameable and enables the NSMenu/NSMenuItem
# features we need — it adds no new crates.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSResponder", "NSMenu", "NSMenuItem"] }

[dev-dependencies]
tempfile = "3"


# Optimize dependencies (libgit2 wrappers, etc.) in dev builds. Without this,
# `cargo run` runs unoptimized git2/xdiff which dominates `get_repo_status`
# and `get_file_contents_batch` for large repos. Project code stays at
# opt-level 0 so incremental compiles remain fast.
[profile.dev.package."*"]
opt-level = 3
